home/Deployments/qbittorrent/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: qbittorrent-system
spec:
  selector:
    app: qbittorrent-app
  ports:
    - port: 6881
      name: udp-connect
      protocol: UDP
    - port: 6881
      name: tcp-connect
      protocol: TCP
    - port: 8080
      name: web
      protocol: TCP
